--- a/css/custom.css
+++ b/css/custom.css
@@ -2,17 +2,51 @@
 
 /*Intro*/
 body{
-  background:#F2F4F9;
+  background:#FBFCFD;
+  font-size: 100%;
+  font-family: 'Raleway', sans-serif;
+  /*font-family: 'helvetica neue', helvetica, sans-serif;*/
+  /*color: #ABBAC4;*/
+  color: hsl(208, 22%, 65%);
 }
+a, a:visited{color: #333; text-decoration: none;}
 
 /* Grid */
-.container{width: 75em; margin: 0 auto;}
+.container{ width: 90%; max-width: 75em; margin: 0 auto;-webkit-animation-duration: 2s;}
 
 
 
 .name{
-  color:#585858;
-  font-size:34px;
+  font-size:3.5em;
   font-weight:400;
-  border-bottom:dashed 1px #979797;
+  /*border-bottom:dashed 1px #979797;*/
+  margin: 2.4em 0 0.2em 0;
+  
 }
+.title{
+  font-size:1.5em;
+  font-weight:300;
+  /*border-bottom:dashed 1px #979797;*/
+  margin-top: 1em;
+  /*color: #C3CDD6;*/
+}
+
+.desc{
+  font-size:1em;
+  line-height: 1.75;
+  font-weight:300;
+  /*border-bottom:dashed 1px #979797;*/
+  width:90%;
+  max-width: 39em;
+  margin:1em 0;
+  color: hsl(208, 20%, 65%);
+}
+.co-link{color:#FF9A63; }
+.git{ font-size:1.1em; font-weight: 400; margin: 3.1em 0 1em}
+.git-block{padding: 0;}
+.git-block li{ display: inline-block; margin: 0em 0.3em;}
+.git-block li a{display: inline-block; width: 50px; height: 50px;}
+.git-block li.email a{  background: url('../images/email_L.png') no-repeat;}
+.git-block li.dribbble a{ background: url('../images/dribbble_L.png') no-repeat;}
+.git-block li.twitter a{ background: url('../images/twitter_L.png') no-repeat;}
+.git-block li.linkedin a{ background: url('../images/linkedin_L.png') no-repeat;}
