--- a/css/custom.css
+++ b/css/custom.css
@@ -6,8 +6,9 @@ body{
   font-size: 100%;
   /*font-family: 'Raleway', sans-serif;*/
   /* font-family: 'Open Sans', sans-serif; */
-  font-family: 'helvetica neue', helvetica, sans-serif;
+  /*font-family: 'helvetica neue', helvetica, sans-serif;*/
   /*color: #ABBAC4; color: hsl(208, 22%, 65%);*/
+  font-family: 'Merriweather', serif;
   color: #3B96EF;
 }
 a, a:visited{color: #333; text-decoration: none;}
