--- a/css/custom.css
+++ b/css/custom.css
@@ -42,7 +42,7 @@ a, a:visited{color: midnightblue; text-decoration: none;}
   /*color: hsl(208, 20%, 65%);*/
   /*color: #1ECDAC;*/
   /*color: #3B96EF;*/
-  color: #939393;
+  color: #333;
 }
 .case-study {list-style:none; margin:0; padding:0;}
 .case-study li {margin:0; padding:0;}
@@ -50,12 +50,12 @@ a, a:visited{color: midnightblue; text-decoration: none;}
 .case-study li a:hover {text-decoration:underline;}
 
 .new-web{font-style: italic; color: #555; font-size: 18px; padding: 40px 0;}
-.co-link{color:#3B96EF; font-weight: 400;}
+.co-link{color:MidnightBlue; font-weight: 400;}
 .co-link:hover{text-decoration:underline;}
-.git{ font-size:1.1em; font-weight: 400; margin: 3.1em 0 1em; color: #666;}
+.git{font-size:1.1em; font-weight: 400; margin: 3.1em 0 1em; color: #333;}
 .git-block{padding: 0;}
 .git-block li{ display: inline-block; margin: 0em 0.5em 0 0;}
-.git-block li a{display: inline-block; color:#3B96EF; /*width: 50px; height: 50px;*/}
+.git-block li a{display: inline-block; color:MidnightBlue; /*width: 50px; height: 50px;*/}
 .git-block li a:hover{text-decoration: underline;}
 
 /*.git-block li.email a{  background: url('../images/email_L.png') no-repeat;}
