--- a/custom.css
+++ b/custom.css
@@ -9,7 +9,9 @@ body{
   /*font-family: 'helvetica neue', helvetica, sans-serif;*/
   /*color: #ABBAC4; color: hsl(208, 22%, 65%);*/
   /*font-family: 'Merriweather', serif;*/
-  font-family: 'Playfair Display', serif;
+/*   font-family: 'Playfair Display', serif; */
+  font-family: 'Poppins', sans-serif;
+
 
   /*color: #3B96EF;*/
 }
