--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,9 @@
 body{
   background:#ffffff;
   font-size: 100%;
-  font-family: 'Playfair Display', serif;
+/*   font-family: 'Playfair Display', serif; */
+  font-family: 'Poppins', sans-serif;
+
 
   color: #333;
 }
