--- a/css/custom.css
+++ b/css/custom.css
@@ -2,7 +2,7 @@
 
 /*Intro*/
 body{
-  background:#ffffff;
+  background:#151b19;
   font-size: 100%;
 /*   font-family: 'Playfair Display', serif; */
   font-family: 'Poppins', sans-serif;
@@ -48,16 +48,16 @@ a, a:visited{color: #DF350D; text-decoration: none;}
 }
 .case-study {list-style:none; margin:0; padding:0;}
 .case-study li {margin:0; padding:0;}
-.case-study li a {display:block; padding:10px 0 0 0; color:MidnightBlue;}
+.case-study li a {display:block; padding:10px 0 0 0; color:#DF350D;}
 .case-study li a:hover {text-decoration:underline;}
 
 .new-web{font-style: italic; color: #555; font-size: 18px; padding: 40px 0;}
-.co-link{color:MidnightBlue; font-weight: 400;}
+.co-link{color:#DF350D; font-weight: 400;}
 .co-link:hover{text-decoration:underline;}
 .git{font-size:1.1em; font-weight: 400; margin: 3.1em 0 1em; color: #333;}
 .git-block{padding: 0;}
 .git-block li{ display: inline-block; margin: 0em 0.5em 0 0;}
-.git-block li a{display: inline-block; color:MidnightBlue; /*width: 50px; height: 50px;*/}
+.git-block li a{display: inline-block; color:#DF350D; /*width: 50px; height: 50px;*/}
 .git-block li a:hover{text-decoration: underline;}
 
 /*.git-block li.email a{  background: url('../images/email_L.png') no-repeat;}
