--- a/css/custom.css
+++ b/css/custom.css
@@ -30,7 +30,7 @@ a, a:visited{color: #DF350D; text-decoration: none;}
   font-weight: 400;
   /*border-bottom:dashed 1px #979797;*/
   margin-top: 0em;
-  color: #7B7B7B;
+  color: #0ae244;
 }
 
 .desc{
