--- a/css/custom.css
+++ b/css/custom.css
@@ -8,7 +8,7 @@ body{
   font-family: 'Poppins', sans-serif;
 
 
-  color: #afafaf;
+  color: #333;
 }
 a, a:visited{color: #DF350D; text-decoration: none;}
 
