--- a/css/custom.css
+++ b/css/custom.css
@@ -60,6 +60,37 @@ a, a:visited{color: #DF350D; text-decoration: none;}
 .git-block li a{display: inline-block; color:#DF350D; /*width: 50px; height: 50px;*/}
 .git-block li a:hover{text-decoration: underline;}
 
+body {
+    background: linear-gradient(146deg, #95d78a, #4dadee, #b0b4f0, #f0dbb0);
+    background-size: 800% 800%;
+
+    -webkit-animation: sitebackground 30s ease infinite;
+    -moz-animation: sitebackground 30s ease infinite;
+    -o-animation: sitebackground 30s ease infinite;
+    animation: sitebackground 30s ease infinite;
+}
+
+@-webkit-keyframes sitebackground {
+    0%{background-position:0% 31%}
+    50%{background-position:100% 70%}
+    100%{background-position:0% 31%}
+}
+@-moz-keyframes sitebackground {
+    0%{background-position:0% 31%}
+    50%{background-position:100% 70%}
+    100%{background-position:0% 31%}
+}
+@-o-keyframes sitebackground {
+    0%{background-position:0% 31%}
+    50%{background-position:100% 70%}
+    100%{background-position:0% 31%}
+}
+@keyframes sitebackground {
+    0%{background-position:0% 31%}
+    50%{background-position:100% 70%}
+    100%{background-position:0% 31%}
+}
+
 /*.git-block li.email a{  background: url('../images/email_L.png') no-repeat;}
 .git-block li.dribbble a{ background: url('../images/dribbble_L.png') no-repeat;}
 .git-block li.twitter a{ background: url('../images/twitter_L.png') no-repeat;}
