--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,7 @@
 /*Intro*/
 body{
   font-size: 100%;
-  font-family: 'Poppins', sans-serif;
+  font-family: georgia, serif;
 
 
   color: #333;
@@ -38,17 +38,19 @@ a, a:visited{color: #DF350D; text-decoration: none;}
 }
 
 .desc{
-  font-size:1em;
+/*   font-size:1.5em; */
   line-height: 1.75;
   font-weight: 300;
   /*border-bottom:dashed 1px #979797;*/
   width:90%;
-  max-width: 39em;
+  max-width: 45em;
   margin:1em 0;
-  /*color: hsl(208, 20%, 65%);*/
-  /*color: #1ECDAC;*/
-  /*color: #3B96EF;*/
   color: #333;
+  font-family: georgia,serif;
+  font-size: 1.125rem;
+  background-color: rgb(255,242,204);
+  border-color: rgb(49,49,49);
+  color: rgb(49,49,49);
 }
 .case-study {list-style:none; margin:0; padding:0;}
 .case-study li {margin:0; padding:0;}
