--- a/custom.css
+++ b/custom.css
@@ -10,7 +10,7 @@ body{
   /*color: #ABBAC4; color: hsl(208, 22%, 65%);*/
   /*font-family: 'Merriweather', serif;*/
 /*   font-family: 'Playfair Display', serif; */
-  font-family: 'Poppins', sans-serif;
+  font-family: georgia,serif;
 
 
   /*color: #3B96EF;*/
@@ -39,17 +39,19 @@ a, a:visited{color: #333; text-decoration: none;}
 }
 
 .desc{
-  font-size:1em;
+/*   font-size:1.5em; */
   line-height: 1.75;
   font-weight: 300;
   /*border-bottom:dashed 1px #979797;*/
   width:90%;
-  max-width: 39em;
+  max-width: 45em;
   margin:1em 0;
-  /*color: hsl(208, 20%, 65%);*/
-  /*color: #1ECDAC;*/
-  /*color: #3B96EF;*/
-  color: #939393;
+  color: #333;
+  font-family: georgia,serif;
+  font-size: 1.125rem;
+  background-color: rgb(255,242,204);
+  border-color: rgb(49,49,49);
+  color: rgb(49,49,49);
 }
 ul.case-study{list-style:none;}
 ul.case-study li{margin:0; padding:0;}
