--- a/css/custom.css
+++ b/css/custom.css
@@ -39,17 +39,19 @@ a, a:visited{color: #DF350D; text-decoration: none;}
 
 .desc{
 /*   font-size:1.5em; */
-  line-height: 1.75;
+  
   font-weight: 300;
   /*border-bottom:dashed 1px #979797;*/
   width:90%;
   max-width: 45em;
   margin:1em 0;
   color: #333;
+}
+ .highlight{
   font-family: georgia,serif;
   font-size: 1.125rem;
+  line-height: 1.75;
   background-color: rgb(255,242,204);
-  border-color: rgb(49,49,49);
   color: rgb(49,49,49);
 }
 .case-study {list-style:none; margin:0; padding:0;}
